maly update plikow

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ title: TL_Blog
 
   <blockquote>
     <p>
-      Perfection is not when there’s nothing to add, but when there’s
-      nothing to take away.
+    Ciekawość jest najpotężniejszą siłą napędową w kosmosie, ponieważ 
+jest w stanie pokonać dwie największe siły hamujące: rozsądek i strach.   
     </p>
-    <p class="author">- Antoine de Saint-Exupéry</p>
+    <p class="author">- Walter Moers</p>
   </blockquote>
   
   <h1>Posty</h1>
